--- a/Tutorial-ScalarField_Tmunu.ipynb
+++ b/Tutorial-ScalarField_Tmunu.ipynb
@@ -84,23 +84,24 @@
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
-    "import sympy as sp                         # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import NRPy_param_funcs as par             # NRPy+: Parameter interface\n",
-    "import indexedexp as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm             # NRPy+: Reference metric support\n",
-    "import BSSN.BSSN_quantities as Bq          # NRPy+: BSSN quantities\n",
-    "import BSSN.ADM_in_terms_of_BSSN as BtoA   # NRPy+: ADM quantities in terms of BSSN quantities\n",
-    "import BSSN.ADMBSSN_tofrom_4metric as ADMg # NRPy+: ADM 4-metric to/from ADM or BSSN quantities\n",
+    "from sympy import Rational                       # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "from NRPy_param_funcs import set_parval_from_str # NRPy+: Parameter interface\n",
+    "from indexedexp import zerorank1, zerorank2      # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "from reference_metric import reference_metric    # NRPy+: Reference metric support\n",
+    "import BSSN.BSSN_quantities as Bq                # NRPy+: BSSN quantities\n",
+    "import BSSN.ADM_in_terms_of_BSSN as BtoA         # NRPy+: ADM quantities in terms of BSSN quantities\n",
+    "import BSSN.ADMBSSN_tofrom_4metric as ADMg       # NRPy+: ADM 4-metric to/from ADM or BSSN quantities\n",
+    "import ScalarField.ScalarField_quantities as SFq # NRPyCritCol: Scalar Field gridfunctions and derivatives\n",
     "\n",
     "# Step 1.b: Set the coordinate system for the numerical grid\n",
-    "coord_system = \"Spherical\"\n",
-    "par.set_parval_from_str(\"reference_metric::CoordSystem\",coord_system)\n",
+    "CoordSystem = \"Spherical\"\n",
+    "set_parval_from_str(\"reference_metric::CoordSystem\", CoordSystem)\n",
     "\n",
     "# Step 1.c: Set spatial dimension (must be 3 for BSSN, as BSSN is\n",
     "#           a 3+1-dimensional decomposition of the general\n",
     "#           relativistic field equations)\n",
     "DIM = 3\n",
-    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
+    "set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Step 1.d: Given the chosen coordinate system, set up\n",
     "#           corresponding reference metric and needed\n",
@@ -108,26 +109,22 @@
     "#    The following function call sets up the reference metric\n",
     "#    and related quantities, including rescaling matrices ReDD,\n",
     "#    ReU, and hatted quantities.\n",
-    "rfm.reference_metric()\n",
-    "\n",
-    "# Step 1.e: Set the theta and phi axes to be the symmetry axes; i.e., axis \"1\" and \"2\",\n",
-    "#           corresponding to the i1 and i2 directions. This sets all spatial derivatives\n",
-    "#           in the theta and phi directions to zero (analytically).\n",
-    "par.set_parval_from_str(\"indexedexp::symmetry_axes\",\"12\")\n",
+    "reference_metric()\n",
     "\n",
     "# Step 1.e: Import all basic (unrescaled) BSSN scalars & tensors\n",
     "Bq.BSSN_basic_tensors()\n",
     "alpha = Bq.alpha\n",
     "betaU = Bq.betaU\n",
     "\n",
-    "# Step 1.g: Define ADM quantities in terms of BSSN quantities\n",
+    "# Step 1.f: Define ADM quantities in terms of BSSN quantities\n",
     "BtoA.ADM_in_terms_of_BSSN()\n",
     "gammaDD = BtoA.gammaDD\n",
     "gammaUU = BtoA.gammaUU\n",
     "\n",
     "# Step 1.h: Define scalar field quantitites\n",
-    "sf_dD   = ixp.declarerank1(\"sf_dD\")\n",
-    "Pi      = sp.Symbol(\"sfM\",real=True)"
+    "SFq.ScalarField_quantities()\n",
+    "Pi    = SFq.sfM\n",
+    "sf_dD = SFq.sf_dD"
    ]
   },
   {
@@ -178,7 +175,7 @@
    "outputs": [],
    "source": [
     "# Step 2a: Set up \\partial^{t}\\varphi = Pi/alpha\n",
-    "sf4dU = ixp.zerorank1(DIM=4)\n",
+    "sf4dU = zerorank1(DIM=4)\n",
     "sf4dU[0] = Pi / alpha"
    ]
   },
@@ -314,10 +311,10 @@
    "outputs": [],
    "source": [
     "# Step 3b: Setting up T^{\\mu\\nu} for a massless scalar field\n",
-    "T4UU = ixp.zerorank2(DIM=4)\n",
+    "T4UU = zerorank2(DIM=4)\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
-    "        T4UU[mu][nu] = sf4dU[mu] * sf4dU[nu] - sp.Rational(1,2) * g4UU[mu][nu] * sf4d2"
+    "        T4UU[mu][nu] = sf4dU[mu] * sf4dU[nu] - Rational(1,2) * g4UU[mu][nu] * sf4d2"
    ]
   },
   {
@@ -381,7 +378,7 @@
     "\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
-    "        print(\"T4UU[\"+str(mu)+\"][\"+str(nu)+\"] - sfTmunu.T4UU[\"+str(mu)+\"][\"+str(nu)+\"] = \"+str(sp.simplify(T4UU[mu][nu] - sfTmunu.T4UU[mu][nu])))"
+    "        print(\"T4UU[\"+str(mu)+\"][\"+str(nu)+\"] - sfTmunu.T4UU[\"+str(mu)+\"][\"+str(nu)+\"] = \"+str((T4UU[mu][nu] - sfTmunu.T4UU[mu][nu]).simplify()))"
    ]
   },
   {
@@ -426,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -440,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
