Tutorial-ScalarField_RHSs.ipynb: major update; replaced by-hand BSSN implementation by ADM implementation; check_zero test passes

--- a/Tutorial-ScalarField_RHSs.ipynb
+++ b/Tutorial-ScalarField_RHSs.ipynb
@@ -147,44 +147,52 @@
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
-    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
-    "import grid as gri                # NRPy+: Functions having to do with numerical grids\n",
-    "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm    # NRPy+: Reference metric support\n",
-    "import BSSN.BSSN_quantities as Bq # NRPy+: BSSN quantities\n",
+    "from sympy import sympify                        # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "from NRPy_param_funcs import set_parval_from_str # NRPy+: Parameter interface\n",
+    "from indexedexp import declarerank1              # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "from reference_metric import reference_metric    # NRPy+: Reference metric support\n",
+    "import BSSN.BSSN_quantities as Bq                # NRPy+: BSSN quantities\n",
+    "import BSSN.ADM_in_terms_of_BSSN as AitoB        # NRPy+: ADM quantities in terms of BSSN quantities\n",
+    "import ScalarField.ScalarField_quantities as SFq # NRPyCritCol: Scalar field gridfunctions and derivatives\n",
     "\n",
     "# Step 1.b: Set the coordinate system for the numerical grid\n",
     "coordsystem = \"Spherical\"\n",
-    "par.set_parval_from_str(\"reference_metric::CoordSystem\",coordsystem)\n",
+    "set_parval_from_str(\"reference_metric::CoordSystem\",coordsystem)\n",
     "\n",
-    "# Step 1.c: Then we set the theta and phi axes to be the symmetry\n",
-    "#           axes; i.e., axis \"1\" and \"2\", corresponding to the\n",
-    "#           i1 and i2 directions.\n",
-    "#           This sets all spatial derivatives in the theta and\n",
-    "#           phi directions to zero (analytically).\n",
-    "# par.set_parval_from_str(\"indexedexp::symmetry_axes\")\n",
-    "\n",
-    "# Step 1.d: Given the chosen coordinate system, set up\n",
+    "# Step 1.c: Given the chosen coordinate system, set up\n",
     "#           corresponding reference metric and needed\n",
     "#           reference metric quantities\n",
     "#    The following function call sets up the reference metric\n",
     "#    and related quantities, including rescaling matrices ReDD,\n",
     "#    ReU, and hatted quantities.\n",
-    "rfm.reference_metric()\n",
+    "reference_metric()\n",
     "\n",
     "# Step 1.e: Set spatial dimension (must be 3 for BSSN, as BSSN is\n",
     "#           a 3+1-dimensional decomposition of the general\n",
     "#           relativistic field equations)\n",
     "DIM = 3\n",
     "\n",
-    "# Step 1.f: Import all needed BSSN quantities\n",
+    "# Step 1.f: Declare all needed ADM quantities in\n",
+    "#           terms of BSSN quantities\n",
     "Bq.BSSN_basic_tensors()\n",
     "trK   = Bq.trK\n",
     "alpha = Bq.alpha\n",
     "betaU = Bq.betaU\n",
-    "Bq.gammabar__inverse_and_derivs()\n",
-    "gammabarUU = Bq.gammabarUU"
+    "\n",
+    "AitoB.ADM_in_terms_of_BSSN()\n",
+    "gammaDD  = AitoB.gammaDD\n",
+    "gammaUU  = AitoB.gammaUU\n",
+    "GammaUDD = AitoB.GammaUDD\n",
+    "\n",
+    "# Step 1.g: Declare all needed scalar field quantities\n",
+    "SFq.ScalarField_quantities()\n",
+    "sf       = SFq.sf\n",
+    "sf_dD    = SFq.sf_dD\n",
+    "sf_dupD  = SFq.sf_dupD\n",
+    "sf_dDD   = SFq.sf_dDD\n",
+    "sfM      = SFq.sfM\n",
+    "sfM_dD   = SFq.sfM_dD\n",
+    "sfM_dupD = SFq.sfM_dupD"
    ]
   },
   {
@@ -220,14 +228,10 @@
    },
    "outputs": [],
    "source": [
-    "# Step 2.a: Declare grid functions for varphi and Pi\n",
-    "sf, sfM = gri.register_gridfunctions(\"EVOL\",[\"sf\", \"sfM\"])\n",
-    "\n",
     "# Step 2.a: Add Term 1 to sf_rhs: -alpha*Pi\n",
     "sf_rhs = - alpha * sfM\n",
     "\n",
     "# Step 2.b: Add Term 2 to sf_rhs: beta^{i}\\partial_{i}\\varphi\n",
-    "sf_dupD = ixp.declarerank1(\"sf_dupD\")\n",
     "for i in range(DIM):\n",
     "    sf_rhs += betaU[i] * sf_dupD[i]"
    ]
@@ -243,9 +247,20 @@
     "\n",
     "Now let us (slightly) rearrange the RHS of $\\partial_{t}\\Pi$ so that we are able to group relevant terms together as we label them\n",
     "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\partial_{t}\\Pi &=\n",
+    "\\underbrace{\\alpha K\\,\\Pi}_{\\text{Term 1}} +\n",
+    "\\underbrace{\\beta^{i}\\partial_{i}\\Pi}_{\\text{Term 2}} -\n",
+    "\\underbrace{\\gamma^{ij}\\left(\\partial_{j}\\varphi\\,\\partial_{i}\\alpha -\\alpha\\,\\Gamma^{k}_{\\ ij}\\, \\partial_{k}\\varphi+\\alpha\\,\\partial_{i}\\partial_{j}\\varphi\\right)}_{\\text{Term 3}}\\ ,\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
     "\\begin{align}\n",
     "\\partial_{t}\\Pi &= \\underbrace{\\alpha K\\,\\Pi}_{\\text{Term 1}} + \\underbrace{\\beta^{i}\\partial_{i}\\Pi}_{\\text{Term 2}} - \\underbrace{e^{-4\\phi}\\bar{\\gamma}^{ij}\\left(\\partial_{i}\\alpha\\partial_{j}\\varphi+\\alpha\\partial_{i}\\partial_{j}\\varphi + 2\\alpha\\partial_{j}\\varphi\\partial_{i}\\phi\\right)}_{\\text{Term 3}} + \\underbrace{e^{-4\\phi}\\alpha\\bar{\\gamma}^{ij}\\bar{\\Gamma}^{k}_{ij}\\partial_{k}\\varphi}_{\\text{Term 4}}\\ .\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -293,7 +308,6 @@
    "outputs": [],
    "source": [
     "# Step 3b: Adding Term 2 to sfM_rhs: beta^{i}\\partial_{i}Pi\n",
-    "sfM_dupD = ixp.declarerank1(\"sfM_dupD\")\n",
     "for i in range(DIM):\n",
     "    sfM_rhs += betaU[i] * sfM_dupD[i]"
    ]
@@ -302,12 +316,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3c: Term 3 of $\\partial_{t}\\Pi$ = sfM_rhs : $-e^{-4\\phi}\\bar{\\gamma}^{ij}\\left(\\partial_{i}\\alpha\\partial_{j}\\varphi+\\alpha\\partial_{i}\\partial_{j}\\varphi + 2\\alpha\\partial_{j}\\varphi\\partial_{i}\\phi\\right)$\n",
+    "## Step 3c: Term 3 of $\\partial_{t}\\Pi$ = sfM_rhs : $-\\gamma^{ij}\\left(\\partial_{j}\\varphi\\,\\partial_{i}\\alpha -\\alpha\\,\\Gamma^{k}_{\\ ij}\\, \\partial_{k}\\varphi+\\alpha\\,\\partial_{i}\\partial_{j}\\varphi\\right)$\n",
     "\n",
     "Now let's focus on Term 3:\n",
     "\n",
     "$$\n",
-    "e^{-4\\phi}\\left(-\\underbrace{\\bar{\\gamma}^{ij}\\partial_{i}\\alpha\\partial_{j}\\varphi}_{\\text{Term 3a}}-\\underbrace{\\alpha\\bar{\\gamma}^{ij}\\partial_{i}\\partial_{j}\\varphi}_{\\text{Term 3b}} - \\underbrace{2\\alpha\\bar{\\gamma}^{ij}\\partial_{j}\\varphi\\partial_{i}\\phi}_{\\text{Term 3c}}\\right)\n",
+    "-\\gamma^{ij}\\left(\\partial_{i}\\alpha\\,\\partial_{j}\\varphi + \\alpha\\,\\partial_{i}\\partial_{j}\\varphi\\right) + \\gamma^{ij}\\alpha\\,\\Gamma^{k}_{\\ ij}\\, \\partial_{k}\\varphi\\;.\n",
     "$$"
    ]
   },
@@ -325,88 +339,21 @@
    "outputs": [],
    "source": [
     "# Step 3c: Adding Term 3 to sfM_rhs\n",
-    "# Step 3c.i: Term 3a: gammabar^{ij}\\partial_{i}\\alpha\\partial_{j}\\varphi\n",
-    "alpha_dD    = ixp.declarerank1(\"alpha_dD\")\n",
-    "sf_dD       = ixp.declarerank1(\"sf_dD\")\n",
-    "sfMrhsTerm3 = sp.sympify(0)\n",
+    "# Step 3c.i: Term 3a: -gammabar^{ij}(alpha_{,i}\\varphi_{,j} + alpha\\varphi_{,ij})\n",
+    "alpha_dD    = declarerank1(\"alpha_dD\")\n",
+    "sfMrhsTerm3 = sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        sfMrhsTerm3 += - gammabarUU[i][j] * alpha_dD[i] * sf_dD[j]\n",
+    "        sfMrhsTerm3 += - gammaUU[i][j] * ( alpha_dD[i] * sf_dD[j] + alpha * sf_dDD[i][j] )\n",
     "\n",
-    "# Step 3c.ii: Term 3b: \\alpha*gammabar^{ij}\\partial_{i}\\partial_{j}\\varphi\n",
-    "sf_dDD = ixp.declarerank2(\"sf_dDD\",\"sym01\")\n",
+    "# Step 3c.ii: Term 3b: gamma^{ij}\\alpha\\Gamma^{k}_{ij}\\varphi_{,k}\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        sfMrhsTerm3 += - alpha * gammabarUU[i][j] * sf_dDD[i][j]\n",
+    "        for k in range(DIM):\n",
+    "            sfMrhsTerm3 += gammaUU[i][j] * alpha * GammaUDD[k][i][j] * sf_dD[k]\n",
     "\n",
-    "# Step 3c.iii: Term 3c: 2*alpha*gammabar^{ij}\\partial_{j}\\varphi\\partial_{i}\\phi\n",
-    "Bq.phi_and_derivs() # sets exp^{-4phi} = exp_m4phi and \\partial_{i}phi = phi_dD[i]\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        sfMrhsTerm3 += - 2 * alpha * gammabarUU[i][j] * sf_dD[j] * Bq.phi_dD[i]\n",
-    "\n",
-    "# Step 3c.iv: Multiplying Term 3 by e^{-4phi} and adding it to sfM_rhs\n",
-    "sfMrhsTerm3 *= Bq.exp_m4phi\n",
-    "sfM_rhs     += sfMrhsTerm3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3d: Term 4 of $\\partial_{t}\\Pi$ = sfM_rhs : $e^{-4\\phi}\\alpha\\bar{\\gamma}^{ij}\\bar{\\Gamma}^{k}_{\\ ij}\\partial_{k}\\varphi$\n",
-    "\n",
-    "We are now going to rewrite this term a bit before implementation. This rewriting is useful in order to reduce the number of finite differences approximations used to evaluate this term. Let us consider the following definitions (see equations 12a and 12b and the discussion above equation 15 in [Brown (2009)](https://arxiv.org/pdf/0902.3652.pdf))\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\Delta\\Gamma^{k}_{\\ ij} &\\equiv \\bar\\Gamma^{k}_{\\ ij} - \\hat\\Gamma^{k}_{\\ ij}\\ ,\\\\\n",
-    "\\bar\\Lambda^{k} &\\equiv \\bar\\gamma^{ij}\\Delta\\Gamma^{k}_{\\ ij}\\ .\n",
-    "\\end{align}\n",
-    "\n",
-    "Then we have\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\text{Term 4} &= e^{-4\\phi}\\alpha\\bar{\\gamma}^{ij}\\bar{\\Gamma}^{k}_{\\ ij}\\partial_{k}\\varphi\\nonumber\\\\\n",
-    "&=e^{-4\\phi}\\alpha\\bar\\gamma^{ij}\\Delta\\Gamma^{k}_{\\ ij}\\partial_{k}\\varphi + e^{-4\\phi}\\alpha\\bar{\\gamma}^{ij}\\hat{\\Gamma}^{k}_{\\ ij}\\partial_{k}\\varphi\\nonumber\\\\\n",
-    "&=e^{-4\\phi}\\left(\\underbrace{\\alpha\\bar\\Lambda^{i}\\partial_{i}\\varphi}_{\\text{Term 4a}} + \\underbrace{\\alpha\\bar{\\gamma}^{ij}\\hat{\\Gamma}^{k}_{\\ ij}\\partial_{k}\\varphi}_{\\text{Term 4b}}\\right)\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:05:16.232834Z",
-     "iopub.status.busy": "2021-06-15T10:05:16.232430Z",
-     "iopub.status.idle": "2021-06-15T10:05:16.234520Z",
-     "shell.execute_reply": "2021-06-15T10:05:16.233994Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Step 3d: Adding Term 4 to sfM_rhs\n",
-    "# Step 3d.i: Term 4a: \\alpha \\bar\\Lambda^{i}\\partial_{i}\\varphi\n",
-    "LambdabarU  = Bq.LambdabarU\n",
-    "sfMrhsTerm4 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    sfMrhsTerm4 += alpha * LambdabarU[i] * sf_dD[i]\n",
-    "\n",
-    "# Step 3d.ii: Evaluating \\bar\\gamma^{ij}\\hat\\Gamma^{k}_{ij}\n",
-    "GammahatUDD = rfm.GammahatUDD\n",
-    "gammabarGammahatContractionU = ixp.zerorank1()\n",
-    "for k in range(DIM):\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            gammabarGammahatContractionU[k] += gammabarUU[i][j] * GammahatUDD[k][i][j]\n",
-    "\n",
-    "# Step 3d.iii: Term 4b: \\alpha \\bar\\gamma^{ij}\\hat\\Gamma^{k}_{ij}\\partial_{k}\\varphi\n",
-    "for i in range(DIM):\n",
-    "    sfMrhsTerm4 += alpha * gammabarGammahatContractionU[i] * sf_dD[i]\n",
-    "\n",
-    "# Step 3d.iii: Multplying Term 4 by e^{-4phi} and adding it to sfM_rhs\n",
-    "sfMrhsTerm4 *= Bq.exp_m4phi\n",
-    "sfM_rhs     += sfMrhsTerm4"
+    "# Step 3c.iii: Add Term 3 to sfM_rhs\n",
+    "sfM_rhs += sfMrhsTerm3"
    ]
   },
   {
@@ -427,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-15T10:05:16.237280Z",
@@ -478,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-15T10:05:16.258384Z",
@@ -505,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
