Tutorial-ETK_thorn-BaikalETK.ipynb: updated multiprocessing import for Mac OS compatibility

--- a/Tutorial-ETK_thorn-BaikalETK.ipynb
+++ b/Tutorial-ETK_thorn-BaikalETK.ipynb
@@ -349,16 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...\n",
-      "\n",
-      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for BSSN constraints (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for BSSN constraints (Cartesian coords)...Generating symbolic expressions for BSSN constraints (Cartesian coords)...\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...Generating symbolic expressions for BSSN constraints (Cartesian coords)...\n",
       "\n",
       "\n",
       "\n",
@@ -366,53 +357,62 @@
       "\n",
       "Generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords)...\n",
       "Generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords)...\n",
-      "Finished generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords) in 0.1 seconds.\n",
-      "Finished generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords) in 0.0 seconds.\n",
-      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 0.3 seconds. Next up: C codegen...Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 0.3 seconds. Next up: C codegen...\n",
-      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 0.3 seconds. Next up: C codegen...\n",
-      "Generating C code for 3-Ricci tensor (FD order=8) (Cartesian coords)...\n",
+      "Finished generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords) in 0.2 seconds.\n",
+      "Finished generating C code for Enforcing det(gammabar)=det(gammahat) constraint (Cartesian coords) in 0.2 seconds.\n",
+      "Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...\n",
+      "\n",
+      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 1.3 seconds. Next up: C codegen...\n",
       "Generating C code for 3-Ricci tensor (FD order=2) (Cartesian coords)...\n",
-      "Generating C code for 3-Ricci tensor (FD order=6) (Cartesian coords)...\n",
-      "\n",
-      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 0.4 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN_RHSs (FD order=8) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 0.4 seconds. Next up: C codegen...\n",
+      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 1.4 seconds. Next up: C codegen...\n",
       "Generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 0.5 seconds. Next up: C codegen...\n",
+      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 1.2 seconds. Next up: C codegen...\n",
       "Generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 0.5 seconds. Next up: C codegen...\n",
+      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 1.5 seconds. Next up: C codegen...\n",
       "Generating C code for BSSN_RHSs (FD order=4) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 0.6 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN constraints (FD order=8) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 0.6 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN constraints (FD order=6) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 0.6 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN_RHSs (FD order=6) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 0.7 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN constraints (FD order=4) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 0.8 seconds. Next up: C codegen...\n",
+      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 3.8 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN_RHSs (FD order=4) (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 3.8 seconds. Next up: C codegen...\n",
       "Generating C code for BSSN_RHSs (FD order=2) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 0.8 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN_RHSs (FD order=4) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 1.0 seconds. Next up: C codegen...\n",
-      "Generating C code for BSSN constraints (FD order=2) (Cartesian coords)...\n",
-      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 1.2 seconds. Next up: C codegen...\n",
+      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 5.3 seconds. Next up: C codegen...\n",
       "Generating C code for BSSN constraints (FD order=4) (Cartesian coords)...\n",
-      "Finished generating C code for BSSN constraints (FD order=4) (Cartesian coords) in 16.5 seconds.\n",
-      "Finished generating C code for BSSN constraints (FD order=6) (Cartesian coords) in 17.0 seconds.\n",
-      "Finished generating C code for BSSN constraints (FD order=2) (Cartesian coords) in 16.6 seconds.\n",
-      "Finished generating C code for BSSN constraints (FD order=4) (Cartesian coords) in 16.9 seconds.\n",
-      "Finished generating C code for BSSN constraints (FD order=8) (Cartesian coords) in 18.5 seconds.\n",
-      "Finished generating C code for BSSN_RHSs (FD order=4) (Cartesian coords) in 37.9 seconds.\n",
-      "Finished generating C code for BSSN_RHSs (FD order=6) (Cartesian coords) in 39.0 seconds.\n",
-      "Finished generating C code for BSSN_RHSs (FD order=8) (Cartesian coords) in 41.5 seconds.\n",
-      "Finished generating C code for BSSN_RHSs (FD order=2) (Cartesian coords) in 49.0 seconds.\n",
-      "Finished generating C code for BSSN_RHSs (FD order=4) (Cartesian coords) in 49.8 seconds.\n",
-      "Finished generating C code for 3-Ricci tensor (FD order=2) (Cartesian coords) in 55.4 seconds.\n",
-      "Finished generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords) in 55.6 seconds.\n",
-      "Finished generating C code for 3-Ricci tensor (FD order=6) (Cartesian coords) in 56.1 seconds.\n",
-      "Finished generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords) in 56.1 seconds.\n",
-      "Finished generating C code for 3-Ricci tensor (FD order=8) (Cartesian coords) in 57.3 seconds.\n"
+      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 5.4 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN constraints (FD order=2) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN constraints (FD order=2) (Cartesian coords) in 77.5 seconds.\n",
+      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...\n",
+      "Finished generating C code for BSSN constraints (FD order=4) (Cartesian coords) in 79.1 seconds.\n",
+      "Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 2.2 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN constraints (FD order=4) (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 1.4 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN_RHSs (FD order=6) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN constraints (FD order=4) (Cartesian coords) in 71.4 seconds.\n",
+      "Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 1.1 seconds. Next up: C codegen...\n",
+      "Generating C code for 3-Ricci tensor (FD order=6) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN_RHSs (FD order=4) (Cartesian coords) in 172.7 seconds.\n",
+      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 2.0 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN constraints (FD order=6) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN_RHSs (FD order=2) (Cartesian coords) in 220.2 seconds.\n",
+      "Generating symbolic expressions for BSSN_RHSs (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN_RHSs (Cartesian coords) in 1.3 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN_RHSs (FD order=8) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN_RHSs (FD order=4) (Cartesian coords) in 222.3 seconds.\n",
+      "Generating symbolic expressions for 3-Ricci tensor (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for 3-Ricci tensor (Cartesian coords) in 1.1 seconds. Next up: C codegen...\n",
+      "Generating C code for 3-Ricci tensor (FD order=8) (Cartesian coords)...\n",
+      "Finished generating C code for BSSN constraints (FD order=6) (Cartesian coords) in 66.8 seconds.\n",
+      "Generating symbolic expressions for BSSN constraints (Cartesian coords)...\n",
+      "Finished generating symbolic expressions for BSSN constraints (Cartesian coords) in 2.1 seconds. Next up: C codegen...\n",
+      "Generating C code for BSSN constraints (FD order=8) (Cartesian coords)...\n",
+      "Finished generating C code for 3-Ricci tensor (FD order=2) (Cartesian coords) in 245.4 seconds.\n",
+      "Finished generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords) in 246.1 seconds.\n",
+      "Finished generating C code for 3-Ricci tensor (FD order=4) (Cartesian coords) in 246.5 seconds.\n",
+      "Finished generating C code for BSSN_RHSs (FD order=6) (Cartesian coords) in 168.2 seconds.\n",
+      "Finished generating C code for BSSN constraints (FD order=8) (Cartesian coords) in 40.0 seconds.\n",
+      "Finished generating C code for 3-Ricci tensor (FD order=6) (Cartesian coords) in 164.4 seconds.\n",
+      "Finished generating C code for BSSN_RHSs (FD order=8) (Cartesian coords) in 108.0 seconds.\n",
+      "Finished generating C code for 3-Ricci tensor (FD order=8) (Cartesian coords) in 138.0 seconds.\n"
      ]
     }
    ],
@@ -465,17 +465,31 @@
     "NRPyEnvVars = []\n",
     "raised_exception = False\n",
     "try:\n",
-    "    if os.name == 'nt':\n",
+    "\n",
+    "    import platform\n",
+    "    os_name = platform.system() # Linux, Darwin, or Windows\n",
+    "    # Step 2.d: Import the multiprocessing module.\n",
+    "    if os_name == 'Windows':\n",
     "        # It's a mess to get working in Windows, so we don't bother. :/\n",
     "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
     "        raise Exception(\"Parallel codegen currently not available in certain environments, e.g., Windows\")\n",
-    "\n",
-    "    # Step 2.d: Import the multiprocessing module.\n",
-    "    import multiprocessing\n",
+    "    elif os_name == \"Darwin\":\n",
+    "        # On Mac OS multiprocessing does not work as expected in Jupyter\n",
+    "        # notebooks, so we use multiprocess instead\n",
+    "        try:\n",
+    "            import multiprocess as mp\n",
+    "        except:\n",
+    "            error = \"Could not load multiprocess. Please install it (e.g., `$ pip install multiprocess`) and try running this notebook again.\"\n",
+    "            raise ImportError(error)\n",
+    "    elif os_name == \"Linux\":\n",
+    "        # On Linux using multiprocessing does not seem to be a problem\n",
+    "        import multiprocessing as mp\n",
+    "    else:\n",
+    "        raise Exception(f\"Unknown system {os_name}. Reverting to serial code generation.\")\n",
     "\n",
     "    # Step 2.e: Evaluate list of functions in parallel if possible;\n",
     "    #           otherwise fallback to serial evaluation:\n",
-    "    pool = multiprocessing.Pool()\n",
+    "    pool = mp.Pool()\n",
     "    NRPyEnvVars.append(pool.map(master_func, range(len(BSSN_funcs))))\n",
     "    pool.terminate()\n",
     "    pool.join()\n",
@@ -1979,7 +1993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
