Tutorial-ETK_thorn-WaveToyNRPy.ipynb: updated multiprocessing import for Mac OS compatibility

--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
+      "Writing ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
      ]
     }
    ],
@@ -406,29 +406,42 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Ignore this warning/backtrace if on a system in which serial codegen is necessary:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/8x/qypjrmd12n7_2mm0s7f2vf8r0000gn/T/ipykernel_4417/1433110239.py\", line 65, in <cell line: 34>\n",
+      "    pool = multiprocessing.Pool() #processes=len(paramslist))\n",
+      "NameError: name 'multiprocessing' is not defined\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "***************************************\n",
-      "Starting parallel C kernel codegen...\n",
+      "Starting serial C kernel codegen...\n",
+      "(If you were running in parallel before,\n",
+      " this means parallel codegen failed)\n",
       "***************************************\n",
-      "Generating symbolic expressions for WaveToy RHSs...Generating symbolic expressions for WaveToy RHSs...\n",
-      "\n",
       "Generating symbolic expressions for WaveToy RHSs...\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.013369560241699219 seconds.\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.025938987731933594 seconds.\n",
       "Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.017975807189941406 seconds.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.019555091857910156 seconds.Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
-      "\n",
-      "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02181220054626465 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.08721494674682617 seconds.\n",
+      "Generating symbolic expressions for WaveToy RHSs...\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02013111114501953 seconds.\n",
+      "Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.11103487014770508 seconds.\n",
+      "Generating symbolic expressions for WaveToy RHSs...\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.013731002807617188 seconds.\n",
       "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.07765388488769531 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.08968853950500488 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.14511585235595703 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.1823718547821045 seconds.\n",
-      "(BENCH) Finished C kernel codegen for WaveToy in 0.3171041011810303 seconds.\n"
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.1474618911743164 seconds.\n",
+      "Generating symbolic expressions for WaveToy RHSs...\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.016054868698120117 seconds.\n",
+      "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.19527101516723633 seconds.\n",
+      "(BENCH) Finished C kernel codegen for WaveToy in 0.7907660007476807 seconds.\n"
      ]
     }
    ],
@@ -468,15 +481,26 @@
     "start = time.time()\n",
     "if __name__ == \"__main__\":\n",
     "    try:\n",
-    "        if os.name == 'nt':\n",
-    "            # Windows & Jupyter multiprocessing do not mix, so we run in serial on Windows.\n",
-    "            #  Here's why: https://stackoverflow.com/questions/45719956/python-multiprocessing-in-jupyter-on-windows-attributeerror-cant-get-attribut\n",
-    "            raise Exception(\"Parallel codegen currently not available in Windows\")\n",
-    "        # Step 3.d.ii: Import the multiprocessing module.\n",
-    "        import multiprocessing\n",
-    "        print(\"***************************************\")\n",
-    "        print(\"Starting parallel C kernel codegen...\")\n",
-    "        print(\"***************************************\")\n",
+    "        import platform\n",
+    "        os_name = platform.system() # Linux, Darwin, or Windows\n",
+    "        # Step 2.d: Import the multiprocessing module.\n",
+    "        if os_name == 'Windows':\n",
+    "            # It's a mess to get working in Windows, so we don't bother. :/\n",
+    "            #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
+    "            raise Exception(\"Parallel codegen currently not available in certain environments, e.g., Windows\")\n",
+    "        elif os_name == \"Darwin\":\n",
+    "            # On Mac OS multiprocessing does not work as expected in Jupyter\n",
+    "            # notebooks, so we use multiprocess instead\n",
+    "            try:\n",
+    "                import multiprocess as mp\n",
+    "            except:\n",
+    "                error = \"Could not load multiprocess. Please install it (e.g., `$ pip install multiprocess`) and try running this notebook again.\"\n",
+    "                raise ImportError(error)\n",
+    "        elif os_name == \"Linux\":\n",
+    "            # On Linux using multiprocessing does not seem to be a problem\n",
+    "            import multiprocessing as mp\n",
+    "        else:\n",
+    "            raise Exception(f\"Unknown system {os_name}. Reverting to serial code generation.\")\n",
     "\n",
     "        # Step 3.d.iii: Define master function for parallelization.\n",
     "        #           Note that lambdifying this doesn't work in Python 3\n",
@@ -1566,7 +1590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
